fix: center on mobile

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -109,6 +109,12 @@ input::placeholder {
     font-size: 24px;
 }
 
+.login-form {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
 #submitForm {
     height: 100%;
     opacity: 0.5;
